added some doc about variables

--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Leaflet.Canvas example</title>
+  <title>particles viz</title>
   <!-- based on leaflet quick example: http://leafletjs.com/examples/quick-start-example.html -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 <body>
   <div id="map"></div>
 
-  <script src="vendor/leaflet.js"></script>
+  <script src="https://d3voyrscnb0slx.cloudfront.net/cartodb.js/v3/cartodb.js"></script>
   <script src="torque.uncompressed.js"></script>
   <script src="leaflet_tileloader_mixin.js"></script>
   <script src="leaflet_canvas_layer.js"></script>
