--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="vendor/leaflet.css" />
   <style> 
-    html, body, #map { height: 100%; padding: 0; margin: 0; background: #000;}
+    html, body, #map { height: 100%; padding: 0; margin: 0; background: #d7282b;}
   </style>
 </head>
 <body>
